# *****************
# * BLAHP scripts * 
# *****************
#
# $Id: Makefile.am,v 1.2 2005/10/18 10:48:20 mezzadri Exp $ 
#
# File:           Makefile.am
#
# Author(s):      Francesco Prelz ($Author: mezzadri $)
#        e-mail: "Francesco.Prelz@mi.infn.it"
#
# Revision history:
#
# 16-Apr-2004  Created 
#

bin_SCRIPTS = pbs_cancel.sh pbs_status.sh pbs_submit.sh pbs_hold.sh pbs_resume.sh lsf_cancel.sh lsf_status.sh lsf_submit.sh lsf_hold.sh lsf_resume.sh

EXTRA_DIST = $(bin_SCRIPTS)
