# *****************
# * BLAHP scripts * 
# *****************
#
# $Id: Makefile.am,v 1.4 2009/03/12 11:37:55 fprelz Exp $ 
#
# File:           Makefile.am
#
# Author(s):      Francesco Prelz ($Author: fprelz $)
#        e-mail: "Francesco.Prelz@mi.infn.it"
#
# Revision history:
#
# 16-Apr-2004  Created 
#

bin_SCRIPTS = blah_common_submit_functions.sh \
  pbs_cancel.sh pbs_status.sh pbs_submit.sh pbs_hold.sh pbs_resume.sh \
  lsf_cancel.sh lsf_status.sh lsf_submit.sh lsf_hold.sh lsf_resume.sh \
  condor_cancel.sh condor_status.sh condor_submit.sh condor_hold.sh condor_resume.sh \
  sge_cancel.sh sge_helper sge_resume.sh sge_submit.sh sge_filestaging \
  sge_hold.sh  sge_status.sh

EXTRA_DIST = $(bin_SCRIPTS)
